# news-title-generator

./: .gitignore  Dockerfile  Makefile  README.md  datasets.dvc  environment.yml  models.dvc  pyproject.toml  requirements.txt
.dvc/: config
llm/: __main__.py  config.py  data.py  embed.py  models.py  tokenize.py  train.py  utils.py
notebooks/: Translate.ipynb  modelling.ipynb  train_embedding.ipynb
